Added validateInput func

--- a/Forelesning 3/Forelesning 3/Forelesning 3.vcxproj
+++ b/Forelesning 3/Forelesning 3/Forelesning 3.vcxproj
@@ -147,15 +147,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Attack.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="PlayerCharacter.h" />
+    <ClInclude Include="PlayerCharacterView.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Attack.cpp" />
     <ClCompile Include="Forelesning 3.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="PlayerCharacter.cpp" />
+    <ClCompile Include="PlayerCharacterView.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
