--- a/Forelesning5/Forelesning5/Forelesning5.vcxproj
+++ b/Forelesning5/Forelesning5/Forelesning5.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TemplateTest.h" />
     <ClInclude Include="vector3D.h" />
   </ItemGroup>
   <ItemGroup>
