--- a/Forelesning5/Forelesning5/Forelesning5.vcxproj.filters
+++ b/Forelesning5/Forelesning5/Forelesning5.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="vector3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TemplateTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
